Enhance & fix Todo's energy level!
